syntax = "proto3";

import "common.proto";
import "protos/futuresCommon.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

option csharp_namespace = "Ligric.Protobuf";

package ligric.protobuf;

service BinanceFuturesOrders {
    rpc OrdersSubscribe(FuturesSubscribeRequest) returns (stream OrdersChanged){
      option (google.api.http).get = "/v1/binance/futures/stream/orders";
	}

	rpc AddOrdersStreamingApi(AddStreamingApiRequest) returns (AddStreamingApiResponse){
	  option (google.api.http) = {
		  post: "/v1/futures/stream/add_orders_streaming_api"
		  body: "*"
	  };
    }
}

message OrdersChanged {
	string ExchangeId = 1;
	FuturesOrder Order = 2;
	Action action = 3;
}

message FuturesOrder {
	int64 id = 1;
	string symbol = 2;
	Side side = 3;
	PositionSide PositionSide = 4;
	string quantity = 5;
	string price = 6;
	string stopPrice = 7;
	string currentPrice = 8;
	string type = 9;
}
